--- a/salesforcetask/src/main/resources/config-qa.yaml
+++ b/salesforcetask/src/main/resources/config-qa.yaml
@@ -5,6 +5,7 @@ api:
   
 http:
   path: "/api/${api.version}/*"
+  path2: "/api/${api.version}/2/*"
   host: "0.0.0.0"
   timeout: '5000' 
   port: "8082"
